[metadata]
name = shared_data_model
version = 4.2.0-rc.3
author = Quality-time team
author_email = Quality-time@ictu.nl
url = https://github.com/ICTU/quality-time
project_urls =
    docs = https://quality-time.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pydantic == 1.9.1

[options.packages.find]
where = src

[mypy]
# The pydantic.mypy plugin fails since mypy 0.920 with this mypy error message:
# setup.cfg:8: error: Error importing plugin "pydantic.mypy": cannot import name 'TypeVarDef' from 'mypy.types' (/.../quality-time/components/server/venv/lib/python3.10/site-packages/mypy/types.cpython-310-darwin.so)
# plugins = pydantic.mypy
html_report = build/mypy
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
