[metadata]
name = shared_python
version = 3.32.0
author = Erik Verboom
author_email = erik.verboom@ictu.nl
url = https://github.com/ICTU/quality-time
project_urls =
    docs = https://quality-time.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src