[metadata]
name = shared_python
version = 3.34.0
author = Erik Verboom
author_email = erik.verboom@ictu.nl
url = https://github.com/ICTU/quality-time
project_urls =
    docs = https://quality-time.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[mypy]
# The pydantic.mypy plugin fails since mypy 0.920 with this mypy error message:
# setup.cfg:8: error: Error importing plugin "pydantic.mypy": cannot import name 'TypeVarDef' from 'mypy.types' (/.../quality-time/components/server/venv/lib/python3.10/site-packages/mypy/types.cpython-310-darwin.so)
# plugins = pydantic.mypy
html_report = build/mypy
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-pymongo]
ignore_missing_imports = true

[mypy-pymongo.database]
ignore_missing_imports = true