[build-system]
requires = [
    "setuptools==65.6.3",
    "wheel==0.38.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "shared_server_code"
version = "4.8.0-rc.1"
authors = [
  { name="Quality-time team", email="quality-time@ictu.nl" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English"
]
dependencies = [
    "bottle == 0.12.23",
    "cryptography == 39.0.1",
    "packaging == 21.3",
    "pydantic == 1.10.5",
    "pymongo == 4.3.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
plugins = "pydantic.mypy"
html_report = "build/mypy"
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "pymongo",
    "bottle"
]
ignore_missing_imports = true
