[project]
name = "shared_server_code"
version = "4.10.0"
dependencies = [
    "bottle==0.12.25",
    "cryptography==40.0.2",
    "packaging==23.1",
    "pydantic==1.10.7",
    "pymongo==4.3.3"
]

[project.optional-dependencies]
dev = [
    "coverage==7.2.3",
    "pep8-naming==0.13.3",
    "pip==23.1.2",
    "pipx==1.2.0",
    "pip-tools==6.13.0",  # To add hashes to requirements
    "pylint==2.17.2",
    "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
]
tools = [
    "bandit==1.7.5",
    "black==23.3.0",
    "dlint==0.14.1",
    "mypy==1.2.0",
    "pip-audit==2.5.4",
    "pydantic==1.10.7",
    "safety==2.3.5",
    "vulture==2.7"
]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "pymongo",
    "bottle"
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
